# docs/swagger.json
@@ -549,7 +549,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by type (default|price_list|promotion)",
+                        "description": "Filter by type (special_price|promotion)",
                         "name": "pricing_type",
                         "in": "query"
                     },
@@ -2009,12 +2009,20 @@
             "type": "string",
             "enum": [
                 "default",
-                "price_list",
+                "special_price",
                 "promotion"
+            ],
+            "x-enum-comments": {
+                "PricingTypeDefault": "fallback only — not creatable"
+            },
+            "x-enum-descriptions": [
+                "fallback only — not creatable",
+                "",
+                ""
             ],
             "x-enum-varnames": [
                 "PricingTypeDefault",
-                "PricingTypePriceList",
+                "PricingTypeSpecialPrice",
                 "PricingTypePromotion"
             ]
         },
